--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 @import "tailwindcss";
+@config "../tailwind.config.js";
+
+@plugin './hero.ts';
+/* Note: You may need to change the path to fit your project structure */
+@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+@custom-variant dark (&:is(.dark *));
 
 :root {
   width: 100%;
@@ -15,6 +21,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root>div {
+  width: 100%;
+  height: 100%;
 }
 
 a {
